added new recipe file air-fryer-waffle.html added new recipe file cinnamon-roll.html added new image waffle.jpg added new image cinnamon-rolls.jpeg modified index.html to include links to the two new recipes modified Description section in home-made-smash-burger.html recipe file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/home-made-smash-burger.html">Home Made Smash Burger</a>
+    <a href="recipes/air-fryer-waffle.html">Air Fryer Waffle</a>
+    <a href="recipes/cinnamon-roll.html">Cinnamon Roll</a>
   </body>
 </html>
