--- a/recipes/home-made-smash-burger.html
+++ b/recipes/home-made-smash-burger.html
@@ -12,11 +12,12 @@
     <h2>Description</h2>
     <p>
       As I am writing this, I had just devoured 3 chicken burritos from taco
-      bell and I am unable to provide a compelling description for this
-      otherwise appetizing recipe. Nevertheless, had my stomach been empty, this
-      recipe would not be my first pick for a hearty and wholesome meal but
-      maybe after a long and tiresome week, I think I would be deserving of this
-      gluttonous meal.
+      bell and the rebellion in my stomach is not allowing me to lie and provide
+      a compelling description for this truly repulsive recipe. Nevertheless,
+      even if I was dying of hunger, I'd stil be hesitant to allow this
+      abomination of a meal commit atrocities to my GI. If gluttony is not one
+      of your concerns, a smash burger is a great way to spend the entire day on
+      the toilet.
     </p>
     <h2>Ingredients</h2>
     <ul>
